Version 4.0.0 - 2016-05-03
Version 3.4.0 - 2014-11-03
* Prevent to modify sensible fields of payment types used in any purchase

Version 3.2.0 - 2014-05-22

Version 3.0.0 - 2013-10-25

Version 2.8.0 - 2013-04-26

Version 2.6.0 - 2012-10-10
* Initial release